Edited to compile/run (slowly) on RPi4 (and possibly other ARM64) using OpenGL ES 3.0

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,14 @@
 # CMake
 cmake-build-debug/
 
+# build
+build/
 
+# submodules
+lib/
+lib/bullet3/
+lib/glew-cmake/
 
+# game data
+resources/
+resources/NFS_3
